[package]
name = "geyser_transfer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
solana-client = "1.18.2"
solana-sdk = "1.18.2"

[build-dependencies]
tonic-build = "0.10"
